css/style.css
@font-face {
    font-family: 'regular';
    src: url(font/ClashGrotesk-Regular.woff2);
}

@font-face {
    font-family: 'semi';
    src: url(font/ClashGrotesk-Semibold.woff2);
}

@font-face {
    font-family: 'variable';
    src: url('font/ClashGrotesk-Variable.woff2') format("woff2 supports variations"),
         url('font/ClashGrotesk-Variable.woff2') format("woff2-variations");
    font-weight: 100 1000;
  }

:root {
    --color: hsl(0, 0%, 86%);
    --colorA: hsla(0, 0%, 100%, 0.2);
    --color2: hsl(0, 0%, 26%);
    --gap: 0.5rem;
    --width: 100px;


    font-family: 'regular';
    font-size: 10px;
    font-smoothing: antialiased;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;

    color: var(--color);
    background-color: var(--color2);
}

button, input[type="submit"], input[type="reset"] {
	background: none;
	color: inherit;
	border: none;
	padding: 0;
    font-size: inherit;
	cursor: pointer;
	outline: inherit;
}

body, h2, h3, p {
    font-size: 1rem;
    font-weight: 400;
    margin: 0;
    padding: 0;
}

h2, h3, button{
    text-transform: uppercase;
}

h2, h3, button {
    box-sizing: border-box;
    padding-top: 0.1em;
    vertical-align: middle;
    line-height: 0;
}

h2, button {
    font-family: 'variable';
    font-variation-settings: "wght" 400;
    transition: font-variation-settings 400ms ease-in-out;
}

.title {
    width: 100%;
    max-width: 150px;
}

main {
    display: grid;
    box-sizing: border-box;
    justify-items: center;
    height: 100dvh;
    width: 100vw;
    grid-template-rows: auto 1fr;
}

header {
    width: fit-content;
	max-width: calc(var(--width) * 6);
    display: grid;
    row-gap: var(--gap);
    justify-items: center;
    margin-inline: 2rem;
    padding-block: var(--gap);
    box-sizing: border-box;
    background: var(--color2);
}

button {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 1rem;
    
}

button:hover {
    text-decoration: underline;
}

button::before {
    display: block;
}

button.active.about::before, button.active.info::before {
    content: "X";
}

button.about::before {
    content: "about";
}

button.info::before {
    content: "info";
}

.item.active h2{
    font-variation-settings: "wght" 600;
}

.information {
    display: grid;
    grid-template-rows: 0fr;
    transition: grid-template-rows 300ms;
}

.information p {
    margin-top: calc(var(--gap) * 0.6);
    text-align: justify;
    text-align-last: center;
    max-width: calc(var(--width) * 4);
}

.information > div {
    overflow: hidden;
}
.active {
    content: "X";
}
.active ~ .information {
    grid-template-rows: 1fr;
}

.expander {
    display: grid;
    justify-content: center;
}

.expander:nth-of-type(1){
    margin-bottom: 2rem;
}

.arrow {
    height: var(--gap);
    margin-top: calc(var(--gap) * 2);
    margin-bottom: calc(var(--gap) / 5);
}

.marquee, .track, .item, .part {
    box-sizing: border-box;
    display: flex;
    align-items: center;
}

.marquee, .item {
    justify-content: center;
}

.marquee {
	overflow: hidden;
    width: 100%;
    height: 1rem;
}
.track {
    width: fit-content;
    height: 100%;
}
.part {
    height: 100%;
    width: fit-content;
} 
.item {
    height: 70%;
    border-right: 1px solid var(--colorA);
    width: var(--width);
    flex-shrink: 0;
    will-change: transform;
}

.item.wide {
    width: calc(var(--width) * 2);
}

.loading-container {
    font-size: 1.4rem;
    box-sizing: border-box;
    z-index: 10000;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    background: var(--color2);
    width: 100%;
    height: 100%;
}

.canvas-container, #canvas {
    box-sizing: border-box;
    width: 100%;
    height: 100%;
}

.canvas-container {
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}

#canvas {
    display: block;
    object-fit: cover;
}

@media (min-width: 500px) {
    :root {
        font-size: 11px;
    }

    body, h2, h3, p {
        font-weight: 400;
        margin: 0;
        padding: 0;
    }

    .expander:nth-of-type(1){
        margin-bottom: 0rem;
    }   

    .work {
        margin-bottom: calc(var(--gap) / 2);
    }

}

@keyframes test {
    0%{font-variation-settings: "wght" 400;}
    100%{font-variation-settings: "wght" 600;}
}

